@@ -1,0 +1,19 @@
+{ 
+    "_ns": { 
+        "dct": "http://purl.org/dc/terms/",
+        "foaf": "http://xmlns.com/foaf/0.1/"
+    },
+    "_id": "http://example.com/people#alice",
+    "a": "foaf:Person",
+    "foaf_name": "Alice Smisth",
+    "foaf_age": "42^xsd_integer",
+    "foaf_homepage": [
+       "http://personal.example.org/~alice/",
+       "http://work.example.com/asmith/" 
+    ],
+    "foaf_knows": { 
+        "_id": "_:1",
+        "foaf_name": "John",
+        "dct_description": "a nice guy@en" 
+    }
+}
